# worldsim

./: .ghlobes.toml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  milky-kit.toml  opencode.json  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.local.json
.claude/rules/: claude-meta.md  clean-architecture.md  config-and-env.md  general.md  module-docs.md  quality-gates.md  rust-style.md  testing.md  time.md  workflow.md  worktrees.md
.claude/skills/debug-worldsim/: SKILL.md
.claude/skills/land/: SKILL.md
.claude/skills/retrospective/: SKILL.md
.claude/skills/rulify/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/test-worldsim/: SKILL.md
.github/workflows/: ci.yml
.mise/tasks/: clean  dev
.mise/tasks/check/: rust
.mise/tasks/fmt/: rust
.mise/tasks/worktree/: cleanup  setup
.serena/: project.yml
assets/: palette.ron
benches/: mind_graph.rs  spatial_index.rs
design/: 00_deep_sim_design.md  01_biology.md  02_psychology.md  03_society.md  04_engine.md  05_ui.md  06_world.md  07_thinking.md  08_species.md  brain.md
design/roadmap_2/: 00_index.md  01_phase0_foundation.md  02_phase1_survival.md  03_phase2_personality.md  04_phase3_memory.md  05_phase4_bodies.md  06_phase5_learning.md  07_phase6_social.md  08_phase7_family.md  09_phase8_stress.md  10_phase9_economy.md  11_phase10_politics.md  12_phase11_culture.md  13_phase12_emergence.md
design/scenarios/: work_rigid_boss.md
docs/: perf_overlay.md  scale.md  systems.md  todo.md
docs/benchmarks/: 2026-04-26-issue-368-spatial-cache.md  2026-04-26-tracy-headless.csv  2026-04-26-tracy-headless.md  2026-04-27-issue-676-10hz-brain-pre.csv  2026-04-27-issue-676-10hz-brain.md  2026-04-27-issue-679-bucket-by-concept-post.csv  2026-04-27-issue-679-bucket-by-concept-pre.csv  2026-04-27-issue-679-bucket-by-concept.md
docs/knowledge/: 08_knowledge_system.md  09_knowledge_migration_guide.md  10_performance_optimizations.md  new-system-overall.md
plans/: 2026-05-09_make-sim-interesting.md  conversations.md
scripts/: perf-snapshot.sh
src/: cli.rs  constants.rs  core.rs  eyes.rs  headless.rs  injuries.rs  lib.rs  main.rs  markings.rs  menu.rs  outline.rs  palette.rs  particles.rs  silhouette.rs  testing.rs
src/agent/: activity.rs  affordance.rs  commitment.rs  communication.rs  culture.rs  drive_registry.rs  events.rs  invariants.rs  inventory.rs  item_slots.rs  mod.rs  movement.rs  naming.rs  player.rs  skills.rs  spawn_human.rs  subject.rs
src/agent/actions/: channel.rs  definition.rs  generic_action.rs  mod.rs  motor.rs  recipes.rs  registry.rs  types.rs
src/agent/biology/: body.rs  combat.rs  mod.rs
src/agent/body/: contributions.rs  effort.rs  food_security.rs  genetics.rs  metabolism.rs  mod.rs  need.rs  needs.rs  rest_quality.rs  species.rs  wakefulness.rs  warmth.rs
src/agent/brains/: active_plan.rs  arbitration.rs  brain_system.rs  drift.rs  emotional.rs  history.rs  mod.rs  plan_memory.rs  planner.rs  proposal.rs  rational.rs  social_initiation.rs  survival.rs  target_enumeration.rs  thinking.rs  threat_appraisal.rs  trace.rs  wakeup.rs
src/agent/engagement/: component.rs  converse.rs  devour.rs  flee.rs  harvest.rs  hunt.rs  markers.rs  mod.rs  perception.rs  registry.rs  sleep.rs
src/agent/mind/: affective_tom.rs  belief_state.rs  belief_updater.rs  consolidation.rs  conversation.rs  (+12 more)
src/core/: diagnostics.rs  entity_serde.rs  event_log.rs  field_logger.rs  log.rs  perf.rs  sim_rng.rs  tick.rs  time.rs
src/testing/: config.rs  scenario.rs  spawn.rs  world.rs
src/ui/: adventure_menu.rs  camera.rs  character_sheet.rs  debug_knowledge.rs  hud.rs  mod.rs  overlays.rs  perf_overlay.rs  sprite_animation.rs  status_icons.rs
src/world/: apple_tree.rs  becomes.rs  berry_bush.rs  campfire.rs  construction_site.rs  corpse.rs  deer.rs  emits_effect.rs  entity_positions.rs  environment.rs  field_grid.rs  field_grid_plugin.rs  fish.rs  fish_movement.rs  forecast.rs  house.rs  human.rs  lean_to.rs  liquid.rs  map.rs  meat.rs  mod.rs  property.rs  sapling.rs  sense_sources.rs  severed_part.rs  spatial_index.rs  spawn.rs  spawn_config.rs  spawn_placement.rs  spawner.rs  stone_node.rs  storage_chest.rs  wolf.rs  wood_log.rs
tests/: integration.rs  scenario_conversation.rs  scenario_greetings.rs  scenario_learning.rs  test_affective_tom.rs  test_anticipation_forecast.rs  test_becomes_substrate.rs  test_belief_state.rs  test_bite_excludes_dead.rs  test_brain_cadence_split.rs  test_brain_target_respected.rs  test_campfire_fuel.rs  test_campfire_ownership.rs  test_cooking.rs  test_culture.rs  test_default_sim_survival.rs  test_defend_self.rs  test_deposit_and_take.rs  test_despawn_cancels_action.rs  test_eat_harvest_cycle.rs  test_effort_model.rs  test_emits_effect_substrate.rs  test_entity_emotions.rs  test_flocking.rs  test_food_security_drive.rs  test_fresh_agent_urgency_bootstrap.rs  test_goal_commitment.rs  test_graze.rs  test_harvest_empty_belief_update.rs  test_harvest_knowledge.rs  test_harvestable_materials.rs  test_human_actions.rs  test_hunger_timing.rs  test_hunting_loop.rs  test_item_properties.rs  test_labor_accumulation.rs  test_locomotion_intensity.rs  test_look_for_fallback.rs  test_main_menu.rs  test_movement.rs  (+33 more)
tests/cases/: scenario_learning.rs  test_anticipation_forecast.rs  test_bite_excludes_dead.rs  test_brain_target_respected.rs  test_campfire_ownership.rs  test_cooking.rs  test_culture.rs  test_default_sim_survival.rs  test_despawn_cancels_action.rs  test_food_security_drive.rs  test_harvest_knowledge.rs  test_hunting_loop.rs  test_item_properties.rs  test_labor_accumulation.rs  test_locomotion_intensity.rs  test_multi_sense_perception.rs  test_observability.rs  test_perception_cache.rs  test_plan_invalidation.rs  test_plan_memory_integration.rs  test_player_controlled_marker.rs  test_reactive_drift.rs  test_rest_completion.rs  test_satiated_no_eat_plans.rs  test_sim_events.rs  test_sleep_prep.rs  test_sleep_pressure.rs  test_stamina_alertness_split.rs  test_theory_of_mind.rs  test_wolf_devours_corpse.rs  test_world_entity_properties.rs
(+76 files in other folders)
