[package]
name = "worldsim"
version = "0.1.0"
edition = "2024"

[dependencies]
# This is a 2D project with an egui-based UI, so we opt out of Bevy's
# default features and compose only the pieces we need:
#   - default_app + default_platform: standard window/asset/input/state plumbing
#   - 2d_bevy_render: Bevy's 2D renderer (sprites, gizmos, core pipeline)
# This drops bevy_pbr, bevy_gltf, bevy_audio, bevy_ui, scene, picking, and the
# rest of the 3D stack, which significantly trims compile time.
bevy = { version = "0.18", default-features = false, features = [
    "default_app",
    "default_platform",
    "2d_bevy_render",
    "dynamic_linking",
] }
# Disable inspector defaults so we don't pull bevy_pbr (and the rest of
# the 3D stack) in just to render an inspector tab for types we never use.
# We still get reflection-based inspection of our own components.
bevy-inspector-egui = { version = "0.36.0", default-features = false, features = [
    "documentation",
    "egui_clipboard",
] }
bevy_egui = { version = "0.39.1", default-features = false, features = [
    "render",
    "manage_clipboard",
    "open_url",
    "default_fonts",
] }
bevy_rand = "0.13.0"
chrono = "0.4.42"
clap = { version = "4.6.0", features = ["derive"] }
egui_dock = "0.18.0"
noise = "0.9.0"
rand = "0.9.2"
rand_chacha = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# CI profile: drop opt-level overrides so compile is fast.
# CI doesn't need fast runtime, just fast compile + test.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = 0

[profile.ci.package."*"]
opt-level = 0
debug = 0

[dev-dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
