[package]
name = "worldsim"
version = "0.1.0"
edition = "2024"

[dependencies]
# This is a 2D project with an egui-based UI, so we opt out of Bevy's
# default features and compose only the pieces we need:
#   - default_app + default_platform: standard window/asset/input/state plumbing
#   - 2d_bevy_render: Bevy's 2D renderer (sprites, gizmos, core pipeline)
# This drops bevy_pbr, bevy_gltf, bevy_audio, bevy_ui, scene, picking, and the
# rest of the 3D stack, which significantly trims compile time.
bevy = { version = "0.18", default-features = false, features = [
  "default_app",
  "default_platform",
  "2d_bevy_render",
] }
# Disable inspector defaults so we don't pull bevy_pbr (and the rest of
# the 3D stack) in just to render an inspector tab for types we never use.
# We still get reflection-based inspection of our own components.
bevy-inspector-egui = { version = "0.36.0", default-features = false, features = [
  "documentation",
  "egui_clipboard",
] }
bevy_egui = { version = "0.39.1", default-features = false, features = [
  "render",
  "manage_clipboard",
  "open_url",
  "default_fonts",
] }
bevy_rand = "0.13.0"
chrono = "0.4.42"
clap = { version = "4.6.0", features = ["derive"] }
egui_dock = "0.18.0"
noise = "0.9.0"
parquet = { version = "58.1.0", default-features = false }
paste = "1.0.15"
rand = "0.9.2"
rand_chacha = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = "1.13"
tracing = "0.1.44"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
strum = { version = "0.28.0", features = ["derive"] }
tracing-tracy = { version = "0.11", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"], optional = true }
ron = "0.12.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Tests run at opt-level=3 (dev default is 1). Long-run survival
# tests drop from ~170s to ~140s for 200k.
[profile.test]
opt-level = 3
debug = 0

# Match dev's dep settings so Bevy + friends share fingerprints across
# `cargo run` and `cargo nextest run`. Without this, profile.test's
# `debug = 0` propagates to deps and forks the cache.
[profile.test.package."*"]
opt-level = 3
debug = 2

# CI profile: drop opt-level overrides so compile is fast.
# CI doesn't need fast runtime, just fast compile + test.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = 0

[profile.ci.package."*"]
opt-level = 0
debug = 0

[features]
default = ["fast-link"]

# Dynamically link Bevy for fast incremental builds. On by default; turn off
# (`--no-default-features`) for any build that needs to statically link a
# native lib that bevy_dylib hides — notably `profile-tracy`.
fast-link = ["bevy/dynamic_linking"]

# Opt-in Tracy profiler integration. Forwards to `bevy/trace_tracy`, which
# auto-instruments every Bevy system as a named span and accepts sampled
# callstacks on top. Build with `--no-default-features --features profile-tracy`,
# then connect the native Tracy viewer (https://github.com/wolfpld/tracy) over
# TCP.
profile-tracy = ["bevy/trace_tracy", "dep:tracing-tracy", "dep:tracing-subscriber"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }

[[bench]]
name = "mind_graph"
harness = false

[[bench]]
name = "spatial_index"
harness = false
